tests/parser/nested_functions/invalid_01.m
% (c) Copyright 2019 Florian Schanda

function invalid_01
  x = 0;
  if x > 0
    function potato
      disp potato;
    end

    potato
  end
end
